Ajuste novedades validar

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -50,24 +50,25 @@
           {{ novedad.proyectosContrato[0].valorTotal }}
         </span>
       </p>
-      <!-- <p>
+      <p>
         <strong>Plazo:</strong>
         <span>
-          24 meses / 25 días
+          {{ novedad.contrato.contratacion.disponibilidadPresupuestal[novedad.contrato.contratacion.disponibilidadPresupuestal.length-1].plazoDias }} Días 
+          {{ novedad.contrato.contratacion.disponibilidadPresupuestal[novedad.contrato.contratacion.disponibilidadPresupuestal.length-1].plazoMeses }} Meses 
         </span>
       </p>
       <p>
         <strong>Fecha de inicio de contrato:</strong>
         <span>
-          25/06/2020
+          
         </span>
       </p>
       <p>
         <strong>Fecha de finalización de contrato:</strong>
         <span>
-          20/07/2022
+
         </span>
-      </p> -->
+      </p>
 
     </mat-card-content>
   </mat-card>
@@ -86,21 +87,21 @@
             <strong>
               Fecha de solicitud de la novedad :
             </strong>
-            {{ novedad.fechaSolictud }}
+            {{ novedad.fechaSolictud | date: 'dd/MM/yyyy' }}
           </p>
           <p>
             <strong>
               Instancia donde se presentó la solicitud :
             </strong>
             <span>
-              {{ novedad.instanciaCodigo }}
+              {{ novedad.instanciaNombre }}
             </span>
           </p>
           <p>
             <strong>
               Fecha de la sesión de la instancia :
             </strong>
-            {{ novedad.fechaSesionInstancia }}
+            {{ novedad.fechaSesionInstancia | date: 'dd/MM/yyyy' }}
           </p>
           <!-- <p>
             <strong>
@@ -121,27 +122,34 @@
           <mat-card class="shipping-card var-main-gris">
             <mat-card-header class="header-card header-card--margin">
               <mat-card-title class="header-card--text textoGris">
-                Suspensión
+                {{ descripcion.nombreTipoNovedad }}
               </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+              <strong>Motivos de la novedad :</strong> 
+                  <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo;"> {{ motivo.nombreMotivo}}, </section> 
+              
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <mat-card-title class="header-card--text sub-text">
+                <section 
+                        [innerHTML]="descripcion.resumenJustificacion"
+                        style="margin-left: 2em"
+                ></section>
+              <mat-card-title class="header-card--text sub-text" *ngIf="descripcion.tipoNovedadCodigo == '4'">
                 Plazo solicitado
               </mat-card-title>
-              <p><strong>Fecha de inicio de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>Fecha final de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> No</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Meses: </strong> {{ descripcion.plazoAdicionalMeses }}</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Días: </strong> {{ descripcion.plazoAdicionalDias }}</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha de inicio de la suspensión: </strong> {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha final de la suspensión: </strong> {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }} </p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '3'" ><strong>Presupuesto adicional solicitado: </strong> {{ descripcion.presupuestoAdicionalSolicitado }} </p>
+              <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> {{ descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}</p>
               <p><strong>Concepto técnico: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <section 
+                        [innerHTML]="descripcion.conceptoTecnico"
+                        style="margin-left: 2em"
+                ></section>
+              <p><strong>Fecha concepto técnico: </strong> {{ descripcion.fechaConcepto | date: 'dd/MM/yyyy' }}</p>
+              <p><strong>Número de radicado en FFIE de solicitud: </strong> {{ descripcion.numeroRadicado }}</p>
             </mat-card-content>
           </mat-card>
         </mat-expansion-panel>
