--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -83,9 +83,6 @@
         </div>
       </div>
 
-      <mat-card-title class="header-card--text sub-text" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2'">
-        Plazo solicitado
-      </mat-card-title>
       <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2'">
         <div class="col-md-8">
           <div class="row">
@@ -129,6 +126,57 @@
               <button mat-button color="primary" type="button" (click)="pickerPlazoFin.open()" class="btn-calendario">
                 <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
               </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <mat-card-title class="header-card--text sub-text" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
+        Plazo solicitado
+      </mat-card-title>
+      
+      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
+        <div class="col-md-8">
+          <div class="row">
+            <div class="pr-1">
+              <label class="label-left" for="plazoAdicionalMeses" [class.color-secondaryColor]="
+                  addressForm.get('plazoAdicionalMeses').invalid && addressForm.get('plazoAdicionalMeses').touched ||
+                  addressForm.get('plazoAdicionalMeses').invalid && estaEditando">
+                  plazo Adicional Meses
+              </label>
+            </div>
+            <div class="col d-flex">
+              <mat-form-field class="full-width">
+                <input matInput type="text" formControlName="plazoAdicionalMeses" #plazoAdicionalMeses
+                  maxlength="20" required>
+              </mat-form-field>
+              <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
+                matTooltipClass="info-tooltip">
+                {{20 - plazoAdicionalMeses.value.length}}
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
+        <div class="col-md-8">
+          <div class="row">
+            <div class="pr-1">
+              <label class="label-left" for="plazoAdicionalDias" [class.color-secondaryColor]="
+                  addressForm.get('plazoAdicionalDias').invalid && addressForm.get('plazoAdicionalDias').touched ||
+                  addressForm.get('plazoAdicionalDias').invalid && estaEditando">
+                  plazo Adicional Días
+              </label>
+            </div>
+            <div class="col d-flex">
+              <mat-form-field class="full-width">
+                <input matInput type="text" formControlName="plazoAdicionalDias" #plazoAdicionalDias
+                  maxlength="20" required>
+              </mat-form-field>
+              <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
+                matTooltipClass="info-tooltip">
+                {{20 - plazoAdicionalDias.value.length}}
+              </span>
             </div>
           </div>
         </div>
@@ -210,6 +258,7 @@
           </div>
         </div>
       </section>
+
       <div class="row">
         <div class="col-md-8">
           <div class="row">
@@ -230,6 +279,7 @@
           </div>
         </div>
       </div>
+
       <div class="mb-05em">
         <div>
           <label class="label-left" for="conceptoTecnico" [class.color-secondaryColor]="
@@ -255,6 +305,7 @@
           </div>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-8">
           <div class="row">
@@ -279,6 +330,7 @@
           </div>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-8">
           <div class="row">
@@ -302,26 +354,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row">
-                <div class="col-md-8">
-                  <div class="row">
-                    <div class="pr-1">
-                      <label class="label-left" for="documentacion" [class.color-secondaryColor]="
-                      addressForm.get('documentacion').invalid && addressForm.get('documentacion').touched ||
-                      addressForm.get('documentacion').invalid && estaEditando">
-                        ¿Cuenta con la documentación soporte suficiente?
-                      </label>
-                    </div>
-                    <div class="col">
-                      <mat-radio-group class="radioInput" formControlName="documentacion">
-                        <mat-radio-button [value]="true">Sí</mat-radio-button>
-                        <mat-radio-button [value]="false">No</mat-radio-button>
-                      </mat-radio-group>
-                      <span class="required-form-group">*</span>
-                    </div>
-                  </div>
-                </div>  
-              </div> -->
     </mat-card-content>
   </mat-card>
   <div class="text-center">
