--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -69,14 +69,18 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-          [routerLink]="[ 'verificarSolicitudNovedad', element.id ]">
+          [routerLink]="[ 'verificarSolicitudNovedad', element.novedadContractualId ]"
+          *ngIf="element.estadoCodigo === '2' || element.estadoCodigo === '3'">
           Verificar solicitud
         </a>
-        <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button">
+        <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+          (click)="verificarSolicitud(element.novedadContractualId)"
+          *ngIf="element.estadoCodigo === '3'">
           Enviar al supervisor
         </button>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-          [routerLink]="[ 'verDetalleSolicitudNovedadObra', element.novedadContractualId ]">
+          [routerLink]="[ 'verDetalleSolicitudNovedadObra', element.novedadContractualId ]"
+          *ngIf="element.estadoCodigo !== '2' && element.estadoCodigo !== '3'">
           Ver detalle
         </a>
       </td>
